Altre modifiche cartelle

--- a/pages/index.html
+++ b/pages/index.html
@@ -63,7 +63,7 @@ $(document).ready(function(){
 <div>
 	<!-- Toolbar a pulsanti -->
 	<!--  <span id="tool">
-		<img src="toolbar.png" width="34" height="546" alt="toolbar" />
+		<img src="images/toolbar.png" width="34" height="546" alt="toolbar" />
 	</span> -->
 	<div id="tool">
 		<input class="toolbarButton" id="selezione" type="button"></input><br/>
@@ -78,7 +78,7 @@ $(document).ready(function(){
 	</span>Carica:
 	<span><input type="file" class="SVG" name="LoadSVG" value="Carica SVG"/></span>
 	</br>
-	<div><img id="paletta" src="paletta.png" width="1100" height="16" alt="paletta" /></div>
+	<div><img id="paletta" src="images/paletta.png" width="1100" height="16" alt="paletta" /></div>
 <div/>
 
 <!-- Inizio Parte Dialog Colori-->
