--- a/pages/index.html
+++ b/pages/index.html
@@ -29,8 +29,15 @@
 		<img src="images/toolbar.png" width="34" height="546" alt="toolbar" />
 	</span> -->
 	<div id="tool">
-		<input class="toolbarButton" id="selezione" type="button"></input><br/>
-		<input title="Disegna un quadrato" class="toolbarButton" id="quadrato" type="button" ></input><br/>
+		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"></input><br/>
+		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"></input><br/>
+		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button" ></input><br/>
+		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"></input><br/>
+
+		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"></input><br/>
+		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
+		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
+		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
 	</div>
 	
 	<!-- Canvas -->
