stili personalizzati per browser

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>AJAXDRAW</title>
 <link rel="stylesheet" type="text/css" href="../styles/style.css"/>
+<link rel="alternate stylesheet" title="opera" type="text/css" href="../styles/opera.css"/>
+<link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
 <link rel="stylesheet" href="../styles/farbtastic.css" type="text/css" />
 <script src="../src/jquery.js"></script>
@@ -16,7 +18,7 @@
 
 
 <body >
-<link rel="stylesheet" href="http://ui.jquery.com/latest/themes/flora/flora.all.css" type="text/css" media="screen" title="Flora (Default)"/>
+
 <script type="text/javascript" src="../src/ui.core.js"></script>
 <script type="text/javascript" src="../src/ui.dialog.js"></script>
 <script type="text/javascript" src="../src/ui.resizable.js"></script>
@@ -33,10 +35,9 @@
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"></input><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button" ></input><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"></input><br/>
-
 		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"></input><br/>
-		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
-		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
+		<input title="Crea poligoni" class="toolbarButton" id="polygonButton" type="button"></input><br/>
+		<input title="Disegna linee a mano libera" class="toolbarButton" id="freeHandButton" type="button"></input><br/>
 		<input title="Disegna un quadrato" class="toolbarButton" id="selezione" type="button"></input><br/>
 	</div>
 	
