--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -6,7 +6,7 @@
 <script src="../jquery.js"></script>
 <script src="../utils.js"></script>
 <script src="../figures.js"></script>
-<script>
+<script type="text/javascript">
 $(document).ready(function(){
 var canvas = document.getElementById("cv");
 //canvas.height = 1000;
@@ -84,9 +84,9 @@ figures.each(function (f) {
              });
 });
 </script>
-<script type="text/javascript" src="draw.js"/>
+<script type="text/javascript" src="draw.js"> </script>
 </head>
 <body>
-<canvas id="cv" height="1000" width="1000"/>
+<canvas id="cv" height="1000" width="1000"> </canvas>
 </body>
 </html>
