index.html aggiorn. con prova canvas e agg. excanvas

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,23 +7,102 @@
 <link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
 <link rel="stylesheet" href="../styles/farbtastic.css" type="text/css" />
-<script src="../src/jquery.js"></script>
-<script src="../src/farbtastic.js"></script>
-
+<script type="text/javascript" src="../src/jquery.js"></script>
+<script type="text/javascript" src="../src/farbtastic.js"></script>
 <script type="text/javascript" src="../src/jquery.dimensions.js"></script>
 <script type="text/javascript" src="../src/jquery.tooltip.js"></script>
-
-<!--  <script type="text/javascript" src="draw.js"/></script> -->
-</head>
-
-
-<body >
-
 <script type="text/javascript" src="../src/ui.core.js"></script>
 <script type="text/javascript" src="../src/ui.dialog.js"></script>
 <script type="text/javascript" src="../src/ui.resizable.js"></script>
 <script type="text/javascript" src="../src/ui.draggable.js"></script>
 <script type="text/javascript" src="../src/gui.js"></script>
+<script type="text/javascript" src="../src/utils.js"></script>
+<script type="text/javascript" src="../src/figures.js"></script>
+<!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
+<script type="text/javascript">
+function draw(){
+var canvas = document.getElementById("cv");
+//canvas.height = 1000;
+//canvas.width = 1000;
+var figures = [];
+
+// Polygon
+var c = new Polygon();
+c.getBorderColour().set(255, 0, 0, new Opacity(1));
+c.getBounds().setStart(new Point(0, 0));
+c.getBounds().setEnd(new Point(100, 100));
+c.edgeNumber().setVal(12);
+figures.push(c);
+// Deformed polygon with border colour
+c = new Polygon();
+c.getBounds().setStart(new Point(150, 0));
+c.getBounds().setEnd(new Point(250, 200));
+c.edgeNumber().setVal(7);
+figures.push(c);
+// Polygon with reversed bounds
+c = new Polygon();
+c.getBounds().setStart(new Point(400, 200));
+c.getBounds().setEnd(new Point(300, 0));
+c.edgeNumber().setVal(7);
+figures.push(c);
+
+// 2 Rectangles
+c = new Rectangle();
+c.getBorderColour().set(255, 0, 0, new Opacity(1));
+c.getBounds().setStart(new Point(50, 270));
+c.getBounds().setEnd(new Point(450, 320));
+figures.push(c);
+c = new Rectangle();
+c._fillColour.set(0, 255, 0, new Opacity(0.8));
+c.getBounds().setStart(new Point(0, 250));
+c.getBounds().setEnd(new Point(200, 300));
+figures.push(c);
+// Reversed rectangle
+c = new Rectangle();
+c.getBorderColour().set(255, 0, 0, new Opacity(1));
+c.getBounds().setStart(new Point(700, 300));
+c.getBounds().setEnd(new Point(500, 250));
+figures.push(c);
+
+// Ellipse
+c = new Circle();
+c.getBorderColour().set(0, 0, 255, new Opacity(1));
+c.getBounds().setStart(new Point(0, 350));
+c.getBounds().setEnd(new Point(400, 450));
+figures.push(c);
+
+// Circle
+c = new Circle();
+c.getBorderColour().set(125, 0, 255, new Opacity(1));
+c.getBounds().setStart(new Point(450, 350));
+c.getBounds().setEnd(new Point(550, 450));
+figures.push(c);
+
+// Reversed ellipse
+c = new Circle();
+c.getBorderColour().set(0, 0, 255, new Opacity(1));
+c.getBounds().setStart(new Point(750, 450));
+c.getBounds().setEnd(new Point(600, 350));
+figures.push(c);
+
+// Straight line
+c = new StraightLine();
+c.getBorderColour().set(0, 0, 255, new Opacity(1));
+c.getBounds().setStart(new Point(0, 500));
+c.getBounds().setEnd(new Point(200, 600));
+figures.push(c);
+
+figures.each(function (f) {
+               f.draw(canvas);
+             });
+}
+</script>
+</head>
+
+
+<body onload="draw()">
+
+
 <!-- Interfaccia -->
 <div>
 	<!-- Toolbar a pulsanti -->
@@ -42,7 +121,7 @@
 	</div>
 	
 	<!-- Canvas -->
-	<span><canvas id="cv" height="540" width="720"/></span>
+	<span><canvas id="cv" height="540" width="720"></canvas></span>
 	<span class="tooltip">
 		<span>Salva l'immagine in un file SVG</span>
 
