spostate librerie sotto src/lib

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,18 +7,18 @@
 <link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
 <link rel="stylesheet" href="../styles/farbtastic.css" type="text/css" />
-<script type="text/javascript" src="../src/jquery.js"></script>
-<script type="text/javascript" src="../src/farbtastic.js"></script>
-<script type="text/javascript" src="../src/jquery.dimensions.js"></script>
-<script type="text/javascript" src="../src/jquery.tooltip.js"></script>
-<script type="text/javascript" src="../src/ui.core.js"></script>
-<script type="text/javascript" src="../src/ui.dialog.js"></script>
-<script type="text/javascript" src="../src/ui.resizable.js"></script>
-<script type="text/javascript" src="../src/ui.draggable.js"></script>
+<script type="text/javascript" src="../src/lib/jquery.js"></script>
+<script type="text/javascript" src="../src/lib/farbtastic.js"></script>
+<script type="text/javascript" src="../src/lib/jquery.dimensions.js"></script>
+<script type="text/javascript" src="../src/lib/jquery.tooltip.js"></script>
+<script type="text/javascript" src="../src/lib/ui.core.js"></script>
+<script type="text/javascript" src="../src/lib/ui.dialog.js"></script>
+<script type="text/javascript" src="../src/lib/ui.resizable.js"></script>
+<script type="text/javascript" src="../src/lib/ui.draggable.js"></script>
 <script type="text/javascript" src="../src/gui.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/figures.js"></script>
-<!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
+<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
 <script type="text/javascript">
 function draw(){
 var canvas = document.getElementById("cv");
