--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title> Draw Test </title>
-<script src="../jquery.js"></script>
+<script src="../lib/jquery.js"></script>
+<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
 <script src="../utils.js"></script>
 <script src="../figures.js"></script>
 <script type="text/javascript">
