--- a/pages/index.html
+++ b/pages/index.html
@@ -134,7 +134,7 @@ figures.each(function (f) {
 <div/>
 
 <!-- Inizio Parte Dialog Colori-->
-<div id="example" class="flora" title="Modifica colori">
+<div id="colorDialog" class="flora" title="Modifica colori">
 	<p>Colore bordo:   
 		<span id="coloreOra" style="background: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span>
@@ -155,7 +155,7 @@ figures.each(function (f) {
 </div>
 
 <!-- Parte Dialog Properties -->
-<div id="example2" class="flora" title="Modifica attributi">
+<div id="propertiesDialog" class="flora" title="Modifica attributi">
 	<p>Altezza:   <INPUT type="text" size="2"/></p>
 	<p>Larghezza:   <INPUT type="text" size="2"/></p>
 	<p>X:  &nbsp; <INPUT type="text" size="2"/>&nbsp;&nbsp;   Y:&nbsp;<INPUT type="text" size="2"/></p>
