aggiunti effetti tasto premuto con librerie annesse

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,6 +16,8 @@
 <script type="text/javascript" src="../src/lib/jquery.dimensions.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.tooltip.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.browser.js"></script>
+<script type="text/javascript" src="../src/lib/effects.core.js"></script>
+<script type="text/javascript" src="../src/lib/effects.highlight.js"></script>
 <script type="text/javascript" src="../src/lib/ui.core.js"></script>
 <script type="text/javascript" src="../src/lib/ui.dialog.js"></script>
 <script type="text/javascript" src="../src/lib/ui.resizable.js"></script>
