altre lievi modifiche

--- a/pages/index.html
+++ b/pages/index.html
@@ -215,7 +215,7 @@ figures.each(function (f) {
 
 <!-- Parte Dialog Properties -->
 <div id="propertiesDialog" class="flora" title="Modifica attributi">
-	<p>Altezza:   <INPUT type="text" size="2"/></p>
+	<p id="prova">Altezza:   <INPUT type="text" size="2"/></p>
 	<p>Larghezza:   <INPUT type="text" size="2"/></p>
 	<p>X:  &nbsp; <INPUT type="text" size="2"/>&nbsp;&nbsp;   Y:&nbsp;<INPUT type="text" size="2"/></p>
 </div>
