Prova funzione cambio colore farbtastic su click primo colore tavolozza

--- a/pages/index.html
+++ b/pages/index.html
@@ -147,7 +147,7 @@ figures.each(function (f) {
 	<!-- Tavolozza nella parte bassa dello schermo -->
 	<div id="palette">
 		<!--  <img id="paletta" src="images/paletta.png" width="1100" height="16" alt="paletta" /> -->
-		<span id="firstPalette" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span id="firstPalette" onclick="cambiaColore()" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
