--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -4,7 +4,7 @@
 <head>
 <title> Draw Test </title>
 <script src="../lib/jquery.js"></script>
-<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
+<!--[if IE]><script type="text/javascript" src="../lib/excanvas.js"></script><![endif]-->
 <script src="../utils.js"></script>
 <script src="../figures.js"></script>
 <script type="text/javascript">
