--- a/pages/dialog_skin.html
+++ b/pages/dialog_skin.html
@@ -116,6 +116,7 @@ figures.each(function (f) {
 		<script type="text/javascript" src="theme/jquery-1.3.1.js"></script>
 		<script type="text/javascript" src="theme/jquery.ui.all.js"></script>
         <script>
+$(document).ready(function(){	
 		$(function(){
 	// Accordion
 	$("#accordion").accordion({ header: "h3" });
