save: aggiunta ellissi sistemati poligoni

--- a/src/test/draw2.html
+++ b/src/test/draw2.html
@@ -53,6 +53,13 @@ c.getBounds().setStart(new Point(700, 300));
 c.getBounds().setEnd(new Point(500, 250));
 figures.push(c);
 
+// Ellipse
+c = new Circle();
+c.getBorderColour().set(0, 0, 255, new Opacity(1));
+c.getBounds().setStart(new Point(0, 350));
+c.getBounds().setEnd(new Point(400, 450));
+figures.push(c);
+
 
 // Circle
 c = new Circle();
