Tavolozza interattiva;creazione dialog da barra se cancellato

--- a/pages/index.html
+++ b/pages/index.html
@@ -126,14 +126,14 @@ figures.each(function (f) {
 	<li id="50000" itemIcon="images/menu_bar/disk.gif"><a href="#" title="Open the file menu">File</a>
 		<ul width="150">
 			<li id="500001" jsFunction="alert('salvato')" itemIcon="images/menu_bar/disk.gif"><a href="#" title="Save your work">Save</a></li>
-			<li id="500002"><a href="#">Save As</a></li>
+			<li id="500002"><a href="#">Salva Come</a></li>
 			<li id="500004" itemType="separator"></li>
-			<li id="500003"><a href="#">Open</a></li>
+			<li id="500003"><a href="#">Apri</a></li>
 		</ul>
 	</li>
-	<li id="50001"><a href="#">View</a>
+	<li id="50001"><a href="#">Visualizza</a>
 		<ul width="130">
-			<li id="500011"><a href="#">Source</a></li>
+			<li id="500011"><a href="#">Sorgente</a></li>
 			<li id="500012"><a href="#">Debug info</a></li>
 			<li id="500013"><a href="#">Layout</a>
 				<ul width="150">
@@ -141,11 +141,12 @@ figures.each(function (f) {
 					<li id="5000132"><a href="#">HTML</a>	
 					<li id="5000133"><a href="#">Javascript</a>	
 				</ul>
-			</li>		
+			</li>
+			<li jsFunction='createColDialog()' id="500014"><a href="#">ColDial</a>		
 		</ul>
 	</li>
 	<li id="50003" itemType="separator"></li>
-	<li id="50002"><a href="#">Options</a></li>
+	<li id="50002"><a href="#">Opzioni</a></li>
 </ul>
 <div id="fifthMenu"></div>
 <script>
@@ -159,6 +160,9 @@ menuBar5.addMenuItems(menuModel5);
 menuBar5.setTarget('fifthMenu');
 menuBar5.init();
 </script>
+
+
+
 	<!-- Toolbar a pulsanti -->
 	<!--  <span id="tool">
 		<img src="images/toolbar.png" width="34" height="546" alt="toolbar" />
@@ -176,8 +180,11 @@ menuBar5.init();
 	
 	<!-- Canvas -->
 	<span>
-		<canvas id="cv" height="540" width="720"></canvas>
+		<canvas id="cv" height="480" width="760"></canvas>
 	</span>
+	
+	
+	<!--  Zona di salvataggio provvisoria -->
 	<div id="saveLoadZone">
 		<span class="tooltip">
 			<span>Salva l'immagine in un file SVG</span>
@@ -194,45 +201,45 @@ menuBar5.init();
 	<!-- Tavolozza nella parte bassa dello schermo -->
 	<div id="palette">
 		<!--  <img id="paletta" src="images/paletta.png" width="1100" height="16" alt="paletta" /> -->
-		<span id="firstPalette" onclick="changeFarbColor(this)" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#FFFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#FFFF00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#FDCA01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#986601">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#FD3301">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#D40000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#980101">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#FDD99B">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#D9BB7A">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#816647">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#565248">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#AACCEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#6699CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#336699">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#003366">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#B3DEFD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#0197FD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#0169C9">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#013397">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#CCFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#98FC66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#339900">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#015A01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#002B3D">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#FF9BFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#FF00FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#6600CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#EEEEEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" style="background-color:#CCCCCF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" style="background-color:#AAAAAA">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#888888">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#666666">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" style="background-color:#333333">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span id="lastPalette" class="paletteComponent" style="background-color:#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span id="firstPalette" onclick="changeFarbColor('#EEC73E')" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#EEC73E')" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#FB8B00')" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#F44800')" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#FFFF99')" style="background-color:#FFFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#FFFF00')" style="background-color:#FFFF00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#FDCA01')" style="background-color:#FDCA01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#986601')" style="background-color:#986601">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#F44800')" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#FD3301')" style="background-color:#FD3301">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#D40000')" style="background-color:#D40000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#980101')" style="background-color:#980101">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#FDD99B')" style="background-color:#FDD99B">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#D9BB7A')" style="background-color:#D9BB7A">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#816647')" style="background-color:#816647">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#565248')" style="background-color:#565248">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#AACCEE')" style="background-color:#AACCEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#6699CC')" style="background-color:#6699CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" onclick="changeFarbColor('#336699')" style="background-color:#336699">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#003366')" style="background-color:#003366">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#B3DEFD')" style="background-color:#B3DEFD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#0197FD')" style="background-color:#0197FD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#0169C9')" style="background-color:#0169C9">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#013397')" style="background-color:#013397">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#CCFF99')" style="background-color:#CCFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#98FC66')" style="background-color:#98FC66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#339900')" style="background-color:#339900">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#015A01')" style="background-color:#015A01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#002B3D')" style="background-color:#002B3D">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#FF9BFF')" style="background-color:#FF9BFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#FF00FF')" style="background-color:#FF00FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#6600CC')" style="background-color:#6600CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#EEEEEE')" style="background-color:#EEEEEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent" onclick="changeFarbColor('#CCCCCF')" style="background-color:#CCCCCF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent" onclick="changeFarbColor('#AAAAAA')" style="background-color:#AAAAAA">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#888888')" style="background-color:#888888">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#666666')" style="background-color:#666666">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent" onclick="changeFarbColor('#333333')" style="background-color:#333333">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span id="lastPalette" onclick="changeFarbColor('#000000')" class="paletteComponent" style="background-color:#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
 	</div>
 
 <div/>
@@ -253,7 +260,7 @@ menuBar5.init();
   			<input type="text" id="color" name="color" value="#123456" />
   		</div>
   		<div id="picker"></div>
-  		<input class="tooltip" type="button" id="closeWheel" value="Chiudi"></input>
+  	<!--  <input class="tooltip" type="button" id="closeWheel" value="Chiudi"></input> -->
 	</form>	
 	<p>Colore riempimento:  
 		<span id="change" style="background: green">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
