animazione mutua esclusione toolbar; altre

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="../src/lib/menu-for-applications.js"></script>
 <link rel="stylesheet" href="../styles/menu_bar/menu-bar.css" type="text/css" />
 <link rel="stylesheet" href="../styles/menu_bar/menu-item.css" type="text/css" />
-
+<!-- Script di prova di disegno su canvas -->
 <script type="text/javascript">
 function draw(){
 var canvas = document.getElementById("cv");
@@ -123,7 +123,7 @@ figures.each(function (f) {
 
 <!-- Barra di salvataggio -->
 <ul id="menuModel5">
-	<li id="50000" itemIcon="images/menu_bar/disk.gif"><a href="#" title="Open the file menu">File</a>
+	<li id="50000" itemIcon="images/menu_bar/disk.gif"><a href="#" title="Apri il menu file">File</a>
 		<ul width="150">
 			<li id="500001" jsFunction="alert('salvato')" itemIcon="images/menu_bar/disk.gif"><a href="#" title="Save your work">Save</a></li>
 			<li id="500002"><a href="#">Salva Come</a></li>
@@ -142,7 +142,7 @@ figures.each(function (f) {
 					<li id="5000133"><a href="#">Javascript</a>	
 				</ul>
 			</li>
-			<li jsFunction='createColDialog()' id="500014"><a href="#">ColDial</a>		
+			<li jsFunction='createColDialog()' id="500014"><a href="#">ColDial</a>	
 		</ul>
 	</li>
 	<li id="50003" itemType="separator"></li>
