aggiunto bottone colorato salva con rollover

--- a/pages/dialog_skin.html
+++ b/pages/dialog_skin.html
@@ -182,16 +182,20 @@ $(document).ready(function(){
   <span>
     <canvas id="cv" height="540" width="720"></canvas>
   </span>
-  <div id="saveLoadZone">
-    <span class="tooltip">
-      <span>Salva l'immagine in un file SVG</span>
-      <input type="button" name="SaveSVG" value="Salva SVG"/>&nbsp;
-      <br/>
-    </span>Carica:
-    <span>
-      <input type="file" class="SVG" name="LoadSVG" value="Carica SVG"/>
-    </span>
-  </div>
+
+
+
+ <div  id="saveLoadZone">
+		<span class="tooltip">
+			
+			<br/>
+		</span>
+Salva l'immagine <a href="#" class="button"><span>Salva SVG</span></a>
+
+		<span> <br>
+			<input  type="file" class="SVG" name="LoadSVG" value="Carica SVG"/>Carica
+		</span>
+	</div>
   <br/>
   
   
